# core

./: .gitignore  .gitmodules  pyproject.toml
config/: .gitignore  noble.yaml  sample_train_config.yaml
csrc/kernels/: froebenius.cu
csrc/kernels/fr_norm/: Makefile  froebenius.cu  test_bind.py
scripts/: README.md  config_examples.yaml  convert_to_hf.py  distributed_train.py  generate.py  muon_train.py  run_experiment.py
src/core/: config.py  model.py  optimizations.py  utils.py
src/core/hf/: __init__.py  configuration_core.py  modeling_core.py
src/core/kernels/cute/: cross_entropy.py
src/core/kernels/triton/: rotary.py
src/core/models/: model.py  model_config.py  model_utils.py
src/core/models/model_recipes/: __init__.py  model_recipe.py  model_recipes.py
src/core/modules/: activation.py  attention.py  block.py  feed_forward.py  init.py  layer_norm.py  linear.py  linear_attention.py  loss.py  noble.py  rope.py
src/core/optim/: __init__.py  muon.py
src/core/optimizers/: lr_scheduler_utils.py  manifold_muon.py  muon.py  optimizer_utils.py
src/core/training/: __init__.py  lightning_model.py  train.py  training_config.py  utils.py
src/core/training/callbacks/: log_callback.py  profiler_callback.py
src/core/training/data/: fineweb.py  gcs_pretokenized_fineweb.py
tests/: test_core_config_yaml.py  test_core_model.py  test_feature_combos.py  test_hf_conversion.py  test_init.py  test_linear_and_noble.py  test_lr_schedulers.py  test_normalized_core_model.py  test_optimizers.py  test_training_config.py  test_utils.py
tests/kernels/: test_fr_norm.py
