[project]
name = "core"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Celente",email = "rafaelmcelente@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch (==2.5.1)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "lightning (>=2.5.1.post0,<3.0.0)",
    "datasets (>=2.20.0,<3.0.0)",
    "transformers (>=4.43.3,<5.0.0)",
]

[tool.poetry]
packages = [
    {include = "core", from = "src"},
    {include = "core/_cuda", from = "csrc/python"},
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
