[project]
name = "core"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Celente", email = "rafaelmcelente@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.8",
    "pydantic>=2.11.5,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "lightning==2.6.1",
    "datasets>=2.20.0,<3.0.0",
    "transformers>=4.43.3,<5.0.0",
    "wandb>=0.21.1,<0.22.0",
    "matplotlib>=3.10.5,<4.0.0",
    "anyscale>=0.26.58",
    "einops>=0.8.2",
    "mlflow>=3.11.1",
    "litdata>=0.2.61",
    "polars>=1.39.3",
    "gcsfs>=2024.6.1",
    "flash-attn-4>=4.0.0b8",
]

[project.optional-dependencies]
gpu = [
    "quack-kernels @ git+https://github.com/Dao-AILab/quack.git@main",
]
dev = [
    "pytest>=8.4.0",
]
test = [
    "pytest>=8.4.0",
]
eval = [
    "lm-eval>=0.4.8",
    "accelerate",
]

[dependency-groups]
dev = [
    "google-cloud-storage>=3.4.0",
    "matplotlib>=3.9.4",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]
